# tg_spending_tracker

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: deploy.yml
nginx/: nginx.conf
scripts/: start.sh
src/: bot.rs  db.rs  item.rs  lib.rs  main.rs
src/migrations/: 20250202_create_tables.sql
