[package]
name = "tg_spending_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
teloxide = { version = "0.13.0", features = ["macros"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
